# mono

./: configure.ac
Martin/: A.cs
data/: config.in
mcs/class/System/: Makefile  System_test.dll.sources  System_xtest.dll.sources  appletls-corefx.sources  appletls-mac.sources  appletls-mobile.sources  appletls.sources  common.sources  common_networking.sources  (+18 more)
mcs/class/System.Core/: Makefile  linux_net_4_x_System.Core.dll.exclude.sources  linux_net_4_x_System.Core.dll.sources  monotouch_System.Core.dll.exclude.sources  monotouch_System.Core.dll.sources  monotouch_tv_runtime_System.Core.dll.exclude.sources  xammac_System.Core.dll.sources
mcs/class/System.Net.Http/: C  ConcurrentQueue_Segment.cs  H  HttpClientHandler.Sockets.cs  Makefile  MartinTest.cs  System.Net.Http.csproj  System.Net.Http.dll.sources  corefx.sources  socketshandler.sources
mcs/class/System.Net.Http.WebRequest/: System.Net.Http.WebRequest.csproj
mcs/class/System.Numerics/: System.Numerics.dll.sources
mcs/class/System.Security/: common_System.Security.dll.sources
mcs/tools/: Makefile
mono/: Makefile.am
mono/btls/: CMakeLists.txt  btls-ssl.c  btls-ssl.h  pal_crypto_config.h
mono/metadata/: Makefile.am  icall-def.h  icall.c  w32socket-internals.h  w32socket-unix.c  w32socket.c
mono/mini/: debugger-agent.c  mini-exceptions.c  mini-runtime.c  mini-wasm-debugger.c
mono/native/: CMakeLists.txt  Makefile.am  martin-test.c  mono-native-platform.h  pal-icalls.c  pal-icalls.h
mono/utils/: mono-log-darwin.c
runtime/: Makefile.am
tools/offsets-tool/: MonoAotOffsetsDumper.cs
(+244 files in other folders)
